# synthetic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
Sandbox/src/: main.cpp
Synthetic/src/: Log.cpp  entryPoint.h  pch.h  synthetic.h
Synthetic/src/Platform/GLFW/: GLFWWindow.cpp  GLFWWindow.h
Synthetic/src/Synthetic/: Application.cpp  Application.h  Log.cpp  Log.h  Window.cpp  Window.h  core.h  entryPoint.h  synthetic.h
Synthetic/src/Synthetic/Events/: ApplicationEvent.h  Event.cpp  Event.h  KeyEvent.cpp  KeyEvent.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Listener.h  MouseEvent.h  listener.cpp
app/: main.cpp
engine/: Application.h  engine.cpp  engine.h  entryPoint.h  synthetic.h
